新增：完成阶段2f班级学习页
